--- a/project.html
+++ b/project.html
@@ -11,10 +11,20 @@
                         margin: 0px;
                         overflow: hidden;
                     }
+                    .info {
+                        position: absolute;
+                        padding: 10px;
+                        width: 100%;
+                        color: #fff;
+                        text-align: center;
+                    }
                 </style>
                 </head>
     <body>
-
+        <div id="instructions" class="info">Click and drag to rotate camera or move dominoes. Left click and drag to pan.<br/>
+            Press a or d to rotate a selected domino. Spacebar to toggle left-click Push Mode.
+        </div>
+        <div id="pushMode" class="info"><br/><br/>Push Mode off</div>
         <script src="three/three.js"></script>
 
         <script src="three/physi.js"></script>
