--- a/project.html
+++ b/project.html
@@ -21,10 +21,10 @@
                 </style>
                 </head>
     <body>
-        <div id="instructions" class="info">Click and drag to rotate camera or move dominoes. Left click and drag to pan.<br/>
-            Press a or d to rotate a selected domino. Spacebar to toggle left-click Push Mode.
+        <div id="instructions" class="info"> z generates a new domino. x deletes a selected domino. <br/> Click and drag to rotate camera or move dominoes. Left click and drag to pan.<br/>
+            Press a or d to rotate a selected domino. Spacebar toggles left-click Push Mode.
         </div>
-        <div id="pushMode" class="info"><br/><br/>Push Mode off</div>
+        <div id="pushMode" class="info"><br/><br/><br/>Push Mode off</div>
         <script src="three/three.js"></script>
 
         <script src="three/physi.js"></script>
